# swiftmail-pubsub-api

./: .env.example  .gitignore  Makefile  README.md  bun.lockb  docker-compose.yml  package.json  pyproject.toml
assets/: self_description.yaml
assets/email_digest_segregate/: system.txt
assets/email_segregate/: system.txt  user.txt
assets/email_summarize/: system.txt
assets/generate_template/: system.txt  user.txt
assets/thread_summarize/: system.txt  user.txt
swiftmail/api/: __init__.py
swiftmail/api/middlewares/: auth.py
swiftmail/api/models/: base.py  dashboard.py  data.py  digest.py  message.py  notification.py  notifications.py  notitications.py  reminder.py  thread.py  user.py
swiftmail/api/rest/routes/: __init__.py
swiftmail/api/routes/: __init__.py
swiftmail/api/routes/auth/: __init__.py  signup.py
swiftmail/api/routes/dashboard/: __init__.py
swiftmail/api/routes/digest/: __init__.py  create.py  delete.py  update.py
swiftmail/api/routes/message/: __init__.py  archive.py  category.py  delete.py  label.py  priority.py  reply.py  (+1 more)
swiftmail/api/ws/: __init__.py
swiftmail/cmd/: seed_db.py  server.py
swiftmail/core/: constants.py  firebase.py  mongodb.py  prompt_factory.py  utils.py
swiftmail/factory/: prompts.py
swiftmail/jobs/: __init__.py  process_email.py
swiftmail/jobs/email/: __init__.py  models.py  processors.py
swiftmail/services/embedding/: __init__.py  huggingface.py  openai.py  utils.py
swiftmail/services/llm/: __init__.py  gpt4omini.py  mistral_7b.py  utils.py
swiftmail/services/mail/: __init__.py  gmail.py
(+25 files in other folders)
